cloud-infra-macros/tests/fails/log_retention_zero.rs
use cloud_infra_macros::log_retention;

fn example() {
    let retention = log_retention!(0);
}

fn main() {}